turtleart.triangleflat.TriangleFlat.scala.error
Compilation error:
TriangleFlat:12: error: Unmatched closing brace '}' ignored here
}
^